--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -3,6 +3,7 @@
   "navbar.sandbox": "Sandbox",
   "codeEditor.title": "Code-Editor",
   "codeEditor.theme": "Farbthema",
+  "codeEditor.fontSize": "Schriftgröße",
   "console.title": "Konsole",
   "viewport.title": "Viewport",
   "editor.run": "Ausführen",
