refactor errors to support tips and add catch error method to interpreter

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -8,7 +8,7 @@
   "viewport.title": "Viewport",
   "editor.run": "Ausführen",
   "editor.stop": "Stoppen",
-  "editor.step": "Einzelschritt",
+  "editor.step": "Schritt",
   "editor.reset": "Zurücksetzen",
   "editor.runSpeed": "Ausführungsgeschwindigkeit"
 }
