change file structure

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -4,6 +4,7 @@
   "codeEditor.title": "Code-Editor",
   "codeEditor.theme": "Farbthema",
   "codeEditor.fontSize": "Schriftgröße",
+  "codeEditor.files": "Dateien",
   "console.title": "Konsole",
   "viewport.title": "Viewport",
   "editor.run": "Ausführen",
