--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,8 @@
   "codeEditor.title": "Code Editor",
   "codeEditor.theme": "Theme",
   "codeEditor.fontSize": "Font Size",
+  "codeEditor.files": "Files",
+  "fileList.newFile": "New File",
   "console.title": "Console",
   "viewport.title": "Viewport",
   "editor.run": "Run",
