--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,5 +12,6 @@
   "editor.stop": "Stop",
   "editor.step": "Step",
   "editor.reset": "Reset",
-  "editor.runSpeed": "Execution Speed"
+  "editor.runSpeed": "Execution Speed",
+  "editor.runInstant": "Instant"
 }
