clean up and add level editor

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,6 +1,8 @@
+
 {
-  "navbar.home": "Startseite",
-  "navbar.sandbox": "Sandbox",
+  "pages.home": "Startseite",
+  "pages.sandbox": "Sandbox",
+  "pages.levelEditor": "Level-Editor",
   "codeEditor.title": "Code-Editor",
   "codeEditor.theme": "Farbthema",
   "codeEditor.fontSize": "Schriftgröße",
