--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -15,5 +15,27 @@
   "editor.runSpeed": "Ausführungsgeschwindigkeit",
   "editor.runInstant": "Sofort",
   "button.copyToClipboard": "In die Zwischenablage Kopieren",
-  "button.copied": "Kopiert!"
+  "button.copied": "Kopiert!",
+
+  "levelEditor.title": "Level-Editor",
+  "levelEditor.headers.tileBrush": "Tile-Pinsel",
+  "levelEditor.headers.wallBrush": "Wand-Pinsel",
+  "levelEditor.headers.mazeSize": "Maze-Größe",
+  "levelEditor.headers.tools": "Werkzeuge",
+  "levelEditor.headers.metadata": "Metadaten",
+  "levelEditor.headers.actions": "Aktionen",
+  "levelEditor.tools.width": "Breite",
+  "levelEditor.tools.height": "Höhe",
+  "levelEditor.tools.fillAllTiles": "Alle Tiles Füllen",
+  "levelEditor.tools.clearAllTiles": "Alle Tiles Leeren",
+  "levelEditor.tools.fillAllWalls": "Alle Wände Füllen",
+  "levelEditor.tools.clearAllWalls": "Alle Wände Leeren",
+  "levelEditor.tools.startFinish": "Start / Ziel",
+  "levelEditor.export.export": "Exportieren",
+  "levelEditor.export.levelName": "Level-Name",
+  "levelEditor.export.levelDescription": "Level-Beschreibung",
+  "levelEditor.export.actions.visualizeMaze": "Maze Visualisieren",
+  "levelEditor.export.actions.editMaze": "Maze Bearbeiten",
+  "levelEditor.export.actions.exportJSON": "JSON Exportieren",
+  "levelEditor.export.actions.reset": "Zurücksetzen"
 }
