refactor level editor

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -7,7 +7,7 @@
   "codeEditor.fontSize": "Schriftgröße",
   "codeEditor.files": "Dateien",
   "console.title": "Konsole",
-  "viewport.title": "Viewport",
+  "viewport.title": "Ansicht",
   "editor.run": "Ausführen",
   "editor.stop": "Stoppen",
   "editor.step": "Schritt",
@@ -18,24 +18,29 @@
   "button.copied": "Kopiert!",
 
   "levelEditor.title": "Level-Editor",
-  "levelEditor.headers.tileBrush": "Tile-Pinsel",
-  "levelEditor.headers.wallBrush": "Wand-Pinsel",
-  "levelEditor.headers.mazeSize": "Maze-Größe",
-  "levelEditor.headers.tools": "Werkzeuge",
+  "levelEditor.headers.tileTool": "Tile-Tool",
+  "levelEditor.headers.wallTool": "Wand-Tool",
+  "levelEditor.headers.mazeSize": "Mazegröße",
+  "levelEditor.headers.tools": "Tools",
   "levelEditor.headers.metadata": "Metadaten",
   "levelEditor.headers.actions": "Aktionen",
   "levelEditor.tools.width": "Breite",
   "levelEditor.tools.height": "Höhe",
-  "levelEditor.tools.fillAllTiles": "Alle Tiles Füllen",
-  "levelEditor.tools.clearAllTiles": "Alle Tiles Leeren",
-  "levelEditor.tools.fillAllWalls": "Alle Wände Füllen",
-  "levelEditor.tools.clearAllWalls": "Alle Wände Leeren",
-  "levelEditor.tools.startFinish": "Start / Ziel",
+  "levelEditor.tools.fillAllTiles": "Alle Tiles füllen",
+  "levelEditor.tools.clearAllTiles": "Alle Tiles leeren",
+  "levelEditor.tools.fillAllWalls": "Alle Wände füllen",
+  "levelEditor.tools.clearAllWalls": "Alle Wände leeren",
+  "levelEditor.tools.start": "Start",
+  "levelEditor.tools.finish": "Ziel",
   "levelEditor.export.export": "Exportieren",
   "levelEditor.export.levelName": "Level-Name",
   "levelEditor.export.levelDescription": "Level-Beschreibung",
-  "levelEditor.export.actions.visualizeMaze": "Maze Visualisieren",
-  "levelEditor.export.actions.editMaze": "Maze Bearbeiten",
-  "levelEditor.export.actions.exportJSON": "JSON Exportieren",
-  "levelEditor.export.actions.reset": "Zurücksetzen"
+  "levelEditor.export.actions.visualizeMaze": "Maze visualisieren",
+  "levelEditor.export.actions.editMaze": "Maze bearbeiten",
+  "levelEditor.export.actions.exportJSON": "JSON exportieren",
+  "levelEditor.export.actions.reset": "Zurücksetzen",
+
+  "tile.grass": "Gras",
+  "tile.water": "Wasser",
+  "wall.stone": "Stein"
 }
