--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,7 @@
   "editor.runInstant": "Instant",
   "button.copyToClipboard": "Copy To Clipboard",
   "button.copied": "Copied!",
+  "button.saved": "Saved!",
 
   "levelEditor.title": "Level Editor",
   "levelEditor.headers.tileTool": "Tile Tool",
@@ -39,7 +40,9 @@
   "levelEditor.export.actions.visualizeMaze": "Visualize Maze",
   "levelEditor.export.actions.editMaze": "Edit Maze",
   "levelEditor.export.actions.exportJSON": "Export JSON",
+  "levelEditor.export.actions.saveCustomLevel": "Save to Custom Levels",
   "levelEditor.export.actions.reset": "Reset",
+
 
   "tile.grass": "Grass",
   "tile.water": "Water",
