--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -14,10 +14,11 @@
   "editor.run": "Run",
   "editor.stop": "Stop",
   "editor.step": "Step",
+  "editor.step.tooltip": "How many steps to execute per click",
   "editor.reset": "Reset",
-  "editor.runSettings": "Execution Settings",
-  "editor.runSpeed": "Execution Speed",
-  "editor.runInstant": "Instant",
+  "editor.settings": "Execution Settings",
+  "editor.settings.speed": "Execution Speed",
+  "editor.settings.speed.unlimited": "Unlimited",
 
   "button.copyToClipboard": "Copy To Clipboard",
   "button.copied": "Copied!",
