add tooltips for color scheme and language toggles

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,4 +1,7 @@
 {
+  "colorScheme.toggle": "Farbtheme wechseln",
+  "language.toggle": "Sprache wechseln",
+
   "pages.home": "Startseite",
   "pages.sandbox": "Sandbox",
   "pages.levelEditor": "Level-Editor",
