fix german translation

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,5 +1,5 @@
 {
-  "colorScheme.toggle": "Farbtheme wechseln",
+  "colorScheme.toggle": "Farbthema wechseln",
   "language.toggle": "Sprache wechseln",
 
   "pages.home": "Startseite",
