--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -48,8 +48,10 @@
   "levelEditor.export.actions.visualizeMaze": "Visualize Maze",
   "levelEditor.export.actions.editMaze": "Edit Maze",
   "levelEditor.export.actions.exportJSON": "Export JSON",
+  "levelEditor.export.actions.exportJSON.modal": "Exported Level JSON",
   "levelEditor.export.actions.saveCustomLevel": "Save to Custom Levels",
   "levelEditor.export.actions.reset": "Reset",
+
 
   "tile.grass": "Grass",
   "tile.water": "Water",
