--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,6 +15,8 @@
   "fileList.rename": "Rename",
   "fileList.rename.action": "Rename File",
   "fileList.rename.fileName": "File Name",
+  "fileList.rename.invalid.exists": "File exists",
+  "fileList.rename.invalid.tooLong": "Name too long",
   "fileList.delete.title": "Delete File",
   "fileList.delete.action": "Delete {{file}}",
   "fileList.delete.confirm": "Are you sure you want to delete this file?",
