add tile type selection to level editor

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -48,12 +48,14 @@
   "levelEditor.title": "Level-Editor",
   "levelEditor.headers.tileTool": "Tile-Tool",
   "levelEditor.headers.wallTool": "Wand-Tool",
+  "levelEditor.headers.theme": "Level-Thema",
   "levelEditor.headers.mazeSize": "Mazegröße",
   "levelEditor.headers.tools": "Tools",
   "levelEditor.headers.metadata": "Metadaten",
   "levelEditor.headers.actions": "Aktionen",
   "levelEditor.tools.width": "Breite",
   "levelEditor.tools.height": "Höhe",
+  "levelEditor.tools.tileType": "Tile-Typ",
   "levelEditor.tools.fillAllTiles": "Alle Tiles füllen",
   "levelEditor.tools.clearAllTiles": "Alle Tiles leeren",
   "levelEditor.tools.fillAllWalls": "Alle Wände füllen",
