--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -48,12 +48,14 @@
   "levelEditor.title": "Level Editor",
   "levelEditor.headers.tileTool": "Tile Tool",
   "levelEditor.headers.wallTool": "Wall Tool",
+  "levelEditor.headers.theme": "Level Theme",
   "levelEditor.headers.mazeSize": "Maze Size",
   "levelEditor.headers.tools": "Tools",
   "levelEditor.headers.metadata": "Metadata",
   "levelEditor.headers.actions": "Actions",
   "levelEditor.tools.width": "Width",
   "levelEditor.tools.height": "Height",
+  "levelEditor.tools.tileType": "Tile Type",
   "levelEditor.tools.fillAllTiles": "Fill All Tiles",
   "levelEditor.tools.clearAllTiles": "Clear All Tiles",
   "levelEditor.tools.fillAllWalls": "Fill All Walls",
