add homepage and new walls/tiles

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -75,8 +75,17 @@
   "levelEditor.export.actions.reset": "Zurücksetzen",
 
   "tile.grass": "Gras",
+  "tile.oldgrass": "Altes Gras",
+  "tile.redgrass": "Rotes Gras",
   "tile.water": "Wasser",
   "wall.stone": "Stein",
 
-  "viewport.levelSelector.title": "Level auswählen"
+  "viewport.levelSelector.title": "Level auswählen",
+
+  "home.tasks.day1.title": "1. Tag: Erste Schritte",
+  "home.tasks.day1.description": "Getting started with AmazeingASM, simple maze algorithms.",
+  "home.tasks.day2.title": "2. Tag: Tiefer eintauchen",
+  "home.tasks.day2.description": "More advanced maze algorithms and introduction data structures.",
+  "home.tasks.day3.title": "3. Tag: Mazes beherrschen",
+  "home.tasks.day3.description": "Pathfinding algorithms, marks and advanced data structures."
 }
