--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -95,5 +95,8 @@
   "home.tasks.day2.title": "2. Tag: Tiefer eintauchen",
   "home.tasks.day2.description": "More advanced maze algorithms and introduction data structures.",
   "home.tasks.day3.title": "3. Tag: Mazes beherrschen",
-  "home.tasks.day3.description": "Pathfinding algorithms, marks and advanced data structures."
+  "home.tasks.day3.description": "Pathfinding algorithms, marks and advanced data structures.",
+
+  "day.day": "Tag {{num}}",
+  "day.task": "Aufgabe {{num}}"
 }
