refactor level editor and tools structure for improved functionality

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -62,16 +62,16 @@
   "levelEditor.headers.tools": "Tools",
   "levelEditor.headers.metadata": "Metadata",
   "levelEditor.headers.actions": "Actions",
+
   "levelEditor.tools.width": "Width",
   "levelEditor.tools.height": "Height",
   "levelEditor.tools.mazeTheme": "Maze Theme",
-  "levelEditor.tools.tileType": "Tile Type",
-  "levelEditor.tools.fillAllTiles": "Fill All Tiles",
-  "levelEditor.tools.clearAllTiles": "Clear All Tiles",
+  "levelEditor.tools.tileOptions": "Tile Properties",
+  "levelEditor.tools.tileOptions.start": "Place Start",
+  "levelEditor.tools.tileOptions.finish": "Place Finish",
   "levelEditor.tools.fillAllWalls": "Fill All Walls",
   "levelEditor.tools.clearAllWalls": "Clear All Walls",
-  "levelEditor.tools.start": "Start",
-  "levelEditor.tools.finish": "Finish",
+
   "levelEditor.export.export": "Export",
   "levelEditor.export.levelName": "Level Name",
   "levelEditor.export.levelTitle": "Level Title",
