--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -78,10 +78,11 @@
   "levelEditor.export.levelDescription": "Level-Beschreibung",
   "levelEditor.export.actions.visualizeMaze": "Maze visualisieren",
   "levelEditor.export.actions.editMaze": "Maze bearbeiten",
-  "levelEditor.export.actions.exportJSON": "JSON exportieren",
-  "levelEditor.export.actions.exportJSON.modal": "Exportiertes Level-JSON",
-  "levelEditor.export.actions.saveCustomLevel": "In Levels speichern",
+  "levelEditor.export.actions.exportJSON": "Aufgabe-Json exportieren",
+  "levelEditor.export.actions.exportJSON.modal": "Exportiertes Aufgabe-Json",
   "levelEditor.export.actions.reset": "Zurücksetzen",
+
+  "levelList.newLevel": "Neues Level",
 
   "maze.theme.plains": "Plains",
   "maze.theme.drylands": "Drylands",
