--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -55,32 +55,34 @@
   "button.saved": "Saved!",
 
   "levelEditor.title": "Level Editor",
-  "levelEditor.headers.tileTool": "Tile Tool",
-  "levelEditor.headers.wallTool": "Wall Tool",
-  "levelEditor.headers.theme": "Level Theme",
-  "levelEditor.headers.mazeSize": "Maze Size",
+  "levelEditor.headers.mode": "Editor Mode",
+  "levelEditor.headers.maze": "Maze",
   "levelEditor.headers.tools": "Tools",
-  "levelEditor.headers.metadata": "Metadata",
   "levelEditor.headers.actions": "Actions",
+
+  "levelEditor.modes.visualize": "Visualize",
+  "levelEditor.modes.edit": "Edit",
 
   "levelEditor.tools.width": "Width",
   "levelEditor.tools.height": "Height",
-  "levelEditor.tools.mazeTheme": "Maze Theme",
+  "levelEditor.tools.mazeTheme": "Theme",
   "levelEditor.tools.tileOptions": "Tile Properties",
   "levelEditor.tools.tileOptions.start": "Place Start",
   "levelEditor.tools.tileOptions.finish": "Place Finish",
   "levelEditor.tools.fillAllWalls": "Fill All Walls",
   "levelEditor.tools.clearAllWalls": "Clear All Walls",
 
-  "levelEditor.export.export": "Export",
-  "levelEditor.export.levelName": "Level Name",
-  "levelEditor.export.levelTitle": "Level Title",
-  "levelEditor.export.levelDescription": "Level Description",
-  "levelEditor.export.actions.visualizeMaze": "Visualize Maze",
-  "levelEditor.export.actions.editMaze": "Edit Maze",
-  "levelEditor.export.actions.exportJSON": "Export Task Json",
-  "levelEditor.export.actions.exportJSON.modal": "Exported Level Json",
-  "levelEditor.export.actions.reset": "Reset",
+  "levelEditor.actions.exportTask": "Export Task",
+  "levelEditor.actions.reset": "Reset",
+
+  "levelEditor.taskExport.taskMeta": "Task Metadata",
+  "levelEditor.taskExport.taskMeta.title": "Task Title",
+  "levelEditor.taskExport.taskMeta.description": "Task Description",
+  "levelEditor.taskExport.exportJson": "Export Json",
+  "levelEditor.taskExport.exportedJson": "Exported Task Json",
+
+  "levelEditor.taskExport.taskMeta.default.title": "Untitled Task",
+  "levelEditor.taskExport.taskMeta.default.description": "No description provided.",
 
   "levelList.newLevel": "New Level",
 
